# axum-handlebars-project

./: Cargo.toml
src/: lib.rs  main.rs
src/auth/: mod.rs
static/css/: style.css
templates/: index.hbs  login.hbs
templates/error/: 404.hbs
templates/layouts/: base.hbs  footer.hbs  navbar.hbs
