[package]
name = "axum-handlebars-project"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["http1"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
handlebars = "6.2.0"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_derive = "1.0.216"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.9"
bcrypt = "0.16.0"
time = "0.3.37"
serde_json = "1.0.134"